ajeitando header e ajuste textos

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     background-color: rgb(25, 27, 43);
     color:aliceblue;
     margin: 50px;
+    margin-top: 50px;
 }
 
 h3{ font-family: monospace;
@@ -68,7 +69,7 @@ h3{ font-family: monospace;
   border-radius: 4px;
 }
 
-/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+/* Style the logo link */
 .header a.logo {
   font-size: 25px;
   font-weight: bold;
