ajeita palavra em cima do header?

--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body{
 h3{ font-family: monospace;
     font-size: larger;
     color: brown; ;
-    position:relative;
     left: 75px;
 } 
 
@@ -51,9 +50,9 @@ h3{ font-family: monospace;
   position:sticky;
   top: 0;
   overflow: hidden;
-  background-color: #020101;
+  background: #020101;
   padding: 20px 10px;
-  color: black
+  color: rgba(0, 0, 0, 0.999)
   ;
 }
 
@@ -79,12 +78,6 @@ h3{ font-family: monospace;
 .header a:hover {
   background-color: #ddd;
   color: black;
-}
-
-/* Style the active/current link*/
-.header a.active {
-  background-color: dodgerblue;
-  color: white;
 }
 
 /* Float the link section to the right */
